--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "http-server -a localhost -p 8000 -c-l ./build"
+    "start": "http-server -a localhost -p 8000 -c-l ./build",
+    "dev": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -25,5 +26,12 @@
     "rimraf": "^2.6.2",
     "run-sequence": "latest"
   },
-  "dependencies": {}
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.3",
+    "eventproxy": "^1.0.0",
+    "superagent": "^3.8.3",
+    "superagent-charset": "^1.2.0",
+    "cheerio": "^1.0.0-rc.2"
+  }
 }
