--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
     "run-sequence": "latest"
   },
   "dependencies": {
+    "async": "^2.6.0",
     "body-parser": "^1.18.2",
-    "express": "^4.16.3",
+    "cheerio": "^1.0.0-rc.2",
     "eventproxy": "^1.0.0",
+    "express": "^4.16.3",
     "superagent": "^3.8.3",
-    "superagent-charset": "^1.2.0",
-    "cheerio": "^1.0.0-rc.2"
+    "superagent-charset": "^1.2.0"
   }
 }
