--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.6.1",
+    "express-session": "^1.15.6",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-babel": "^7.0.1",
@@ -32,6 +33,7 @@
     "cheerio": "^1.0.0-rc.2",
     "eventproxy": "^1.0.0",
     "express": "^4.16.3",
+    "socket.io": "^2.1.1",
     "superagent": "^3.8.3",
     "superagent-charset": "^1.2.0"
   }
